--- a/package.json
+++ b/package.json
@@ -1,30 +1,18 @@
 {
-  "name": "graveball",
-  "version": "0.0.1",
-  "description": "A ball moving around platforms.",
-  "main": "app.js",
+  "name": "client",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "jquery": "3.3.1",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react-scripts": "1.1.4",
+    "three": "0.92.0"
+  },
   "scripts": {
-    "commit": "git-cz",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/fabioDaFerreira/GraveBall.git"
-  },
-  "author": "martinhoferreira10@gmail.com",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/fabioDaFerreira/GraveBall/issues"
-  },
-  "homepage": "https://github.com/fabioDaFerreira/GraveBall#readme",
-  "devDependencies": {
-    "commitizen": "2.9.5",
-    "cz-conventional-changelog": "1.2.0",
-    "gulp": "3.9.1",
-    "run-sequence": "1.2.2",
-    "wiredep": "4.0.0"
-  },
-  "czConfig": {
-    "path": "node_modules/cz-conventional-changelog"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
