--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "name": "client",
-  "version": "0.1.0",
+  "version": "2.0.0",
   "private": true,
   "dependencies": {
+    "immutable": "3.8.2",
     "jquery": "3.3.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-redux": "5.0.7",
+    "react-resize-aware": "2.7.0",
     "react-scripts": "1.1.4",
+    "redux": "4.0.0",
+    "redux-devtools-extension": "2.13.2",
     "three": "0.92.0"
   },
   "scripts": {
