--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "immutable": "3.8.2",
+    "node-sass-chokidar": "1.3.0",
+    "npm-run-all": "4.1.3",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-redux": "5.0.7",
@@ -14,8 +16,12 @@
     "three": "0.92.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build-css": "node-sass-chokidar -o src/ --include-path ./src --include-path ./node_modules src/",
+    "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
+    "start": "npm-run-all -p watch-css start-js",
+    "start-js": "react-scripts start",
+    "build-js": "react-scripts build",
+    "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
