--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,8 @@
 # Set the default behavior, in case people don't have core.autocrlf set.
 * text=lf
+
+# Explicitly declare text files you want to always be normalized and converted
+# to native line endings on checkout.
+*.js text
+*.css text
+*.html text
