--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "client",
-  "version": "1.0.2",
-  "private": true,
+  "name": "game-integrator-kit",
+  "version": "1.0.3",
+  "private": false,
   "dependencies": {
+    "@material-ui/core": "1.0.0",
     "immutable": "3.8.2",
     "node-sass-chokidar": "1.3.0",
     "npm-run-all": "4.1.3",
@@ -15,6 +16,7 @@
     "reduce-reducers": "0.3.0",
     "redux": "4.0.0",
     "redux-devtools-extension": "2.13.2",
+    "sass-flex-mixin": "1.0.3",
     "three": "0.92.0"
   },
   "scripts": {
