--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": false,
   "dependencies": {
     "@material-ui/core": "1.0.0",
+    "@material-ui/icons": "1.0.0",
     "immutable": "3.8.2",
     "node-sass-chokidar": "1.3.0",
     "npm-run-all": "4.1.3",
