--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cover": "npm test -- --coverage"
   },
   "devDependencies": {
     "eslint": "4.19.1",
