--- a/package.json
+++ b/package.json
@@ -6,17 +6,13 @@
     "@material-ui/core": "1.0.0",
     "@material-ui/icons": "1.0.0",
     "immutable": "3.8.2",
-    "node-sass-chokidar": "1.3.0",
-    "npm-run-all": "4.1.3",
     "prop-types": "15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-redux": "5.0.7",
     "react-resize-aware": "2.7.0",
-    "react-scripts": "1.1.4",
     "reduce-reducers": "0.3.0",
     "redux": "4.0.0",
-    "redux-devtools-extension": "2.13.2",
     "sass-flex-mixin": "1.0.3",
     "three": "0.92.0"
   },
@@ -32,11 +28,22 @@
     "cover": "npm test -- --coverage"
   },
   "devDependencies": {
+    "@types/jest": "22.2.3",
+    "babel-core": "6.26.3",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "babel-register": "6.26.0",
     "eslint": "4.19.1",
     "eslint-config-airbnb": "16.1.0",
     "eslint-plugin-css-modules": "2.7.5",
     "eslint-plugin-import": "2.12.0",
+    "eslint-plugin-jest": "21.15.1",
     "eslint-plugin-jsx-a11y": "6.0.3",
-    "eslint-plugin-react": "7.8.2"
+    "eslint-plugin-react": "7.8.2",
+    "jest-babel": "1.0.1",
+    "node-sass-chokidar": "1.3.0",
+    "npm-run-all": "4.1.3",
+    "react-scripts": "1.1.4",
+    "redux-devtools-extension": "2.13.2"
   }
 }
