--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "game-integrator-kit",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "private": false,
   "dependencies": {
     "@material-ui/core": "1.0.0",
@@ -14,7 +14,8 @@
     "reduce-reducers": "0.3.0",
     "redux": "4.0.0",
     "sass-flex-mixin": "1.0.3",
-    "three": "0.92.0"
+    "three": "0.92.0",
+    "redux-devtools-extension": "2.13.2"
   },
   "scripts": {
     "build-css": "node-sass-chokidar -o src/ --include-path ./src --include-path ./node_modules src/",
@@ -43,7 +44,6 @@
     "jest-babel": "1.0.1",
     "node-sass-chokidar": "1.3.0",
     "npm-run-all": "4.1.3",
-    "react-scripts": "1.1.4",
-    "redux-devtools-extension": "2.13.2"
+    "react-scripts": "1.1.4"
   }
 }
