--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,8 @@
 {
-    "presets": [
-      "react",
-      "es2015"
-    ],
-    "sourceMaps": "inline",
-    "retainLines": true
-  }
+  "presets": [
+    "react",
+    "env"
+  ],
+  "sourceMaps": "inline",
+  "retainLines": true
+}
