--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "react-resize-aware": "2.7.0",
     "reduce-reducers": "0.3.0",
     "redux": "4.0.0",
+    "redux-devtools-extension": "2.13.2",
     "sass-flex-mixin": "1.0.3",
-    "three": "0.92.0",
-    "redux-devtools-extension": "2.13.2"
+    "three": "0.92.0"
   },
   "scripts": {
     "build-css": "node-sass-chokidar -o src/ --include-path ./src --include-path ./node_modules src/",
@@ -31,9 +31,12 @@
   "devDependencies": {
     "@types/jest": "22.2.3",
     "babel-core": "6.26.3",
-    "babel-preset-es2015": "6.24.1",
+    "babel-jest": "23.0.1",
+    "babel-preset-env": "1.7.0",
     "babel-preset-react": "6.24.1",
     "babel-register": "6.26.0",
+    "enzyme": "3.3.0",
+    "enzyme-adapter-react-16": "1.1.1",
     "eslint": "4.19.1",
     "eslint-config-airbnb": "16.1.0",
     "eslint-plugin-css-modules": "2.7.5",
@@ -41,9 +44,16 @@
     "eslint-plugin-jest": "21.15.1",
     "eslint-plugin-jsx-a11y": "6.0.3",
     "eslint-plugin-react": "7.8.2",
-    "jest-babel": "1.0.1",
+    "jest": "23.1.0",
     "node-sass-chokidar": "1.3.0",
     "npm-run-all": "4.1.3",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "react-test-renderer": "16.4.0"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "**/src/**.{js}",
+      "!**/game/graveball/**"
+    ]
   }
 }
