--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,14 @@
 # styles
 src/**/*.css
 
+#games directory
+/src/games/*
+
+# exception to the rule
+!/src/games/.gitkeep 
+
 # dependencies
+/games-examples/**/node_modules
 /src/games/**/node_modules
 /node_modules
 
