--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
     "@babel/preset-env": "7.3.1",
     "@babel/preset-react": "7.0.0",
     "@types/jest": "22.2.3",
+    "@types/react": "16.9.5",
+    "@types/react-dom": "16.9.1",
+    "@types/react-redux": "7.1.4",
+    "@types/webpack-env": "1.14.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
     "babel-loader": "8.0.5",
